--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,42 +1,48 @@
-.name: CI
+name: Build APK
+
 on:
   push:
-    branches: [ main ]
+    branches:
+      - main  # Ejecutar solo cuando haya cambios en la rama main
+  pull_request:
 
 jobs:
   build:
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v2
+    # 1. Clonar el repositorio
+    - name: Checkout code
+      uses: actions/checkout@v2
 
-      # used to cache dependencies with a timeout
-      - name: Get Date
-        id: get-date
-        run: |
-          echo "::set-output name=date::$(/bin/date -u "+%Y%m%d")"
-        shell: bash
+    # 2. Instalar dependencias de Python (Kivy y Buildozer)
+    - name: Set up Python
+      uses: actions/setup-python@v2
+      with:
+        python-version: '3.x'
 
-      - name: Cache Buildozer global directory
-        uses: actions/cache@v2
-        with:
-          path: .buildozer_global
-          key: buildozer-global-${{ hashFiles('buildozer.spec') }} # Replace with your path
+    - name: Install dependencies
+      run: |
+        sudo apt update
+        sudo apt install -y python3-pip build-essential libssl-dev libffi-dev python3-dev
+        pip install --upgrade pip
+        pip install cython==0.29.21
+        pip install buildozer
 
-      - uses: actions/cache@v2
-        with:
-          path: .buildozer
-          key: ${{ runner.os }}-${{ steps.get-date.outputs.date }}-${{ hashFiles('buildozer.spec') }}
+    # 3. Configurar el entorno de Android
+    - name: Install Android SDK and NDK
+      run: |
+        sudo apt install -y openjdk-8-jdk
+        sudo apt-get install -y android-sdk
 
-      - name: Build with Buildozer
-        uses: ArtemSBulgakov/buildozer-action@v1
-        id: buildozer
-        with:
-          command: buildozer android debug
-          buildozer_version: stable
+    # 4. Instalar Buildozer y construir el APK
+    - name: Build APK
+      run: |
+        buildozer android debug
 
-      - name: Upload artifacts
-        uses: actions/upload-artifact@v3
-        with:
-          name: package
-          path: ${{ steps.buildozer.outputs.filename }}
+    # 5. Guardar el APK generado como artefacto
+    - name: Upload APK
+      uses: actions/upload-artifact@v2
+      with:
+        name: app-apk
+        path: bin/*.apk
